transaction list does not work

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <script src="balance.js" defer type="text/babel"></script>
     <script src="alldata.js" defer type="text/babel"></script>
     <script src="home.js" defer type="text/babel"></script>
+    <script src="transactionlist.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
 
   </body>
