--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,38 @@
     <script src="https://unpkg.com/react-router@6/umd/react-router.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-router-dom@6/umd/react-router-dom.development.js" crossorigin></script>
 
-    <!-- load our react component. -->
+    <!-- load firebase -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js";
+      import { 
+        getAuth,
+        createUserWithEmailAndPassword,
+        signInWithEmailAndPassword,
+        GoogleAuthProvider,
+        signInWithPopup,
+      } from 'https://www.gstatic.com/firebasejs/9.9.3/firebase-auth.js';
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyBrn6ZEptem24fSB7cEo6yGnTAuK7EVc2w",
+        authDomain: "goodbank-ca48f.firebaseapp.com",
+        projectId: "goodbank-ca48f",
+        storageBucket: "goodbank-ca48f.appspot.com",
+        messagingSenderId: "550377717744",
+        appId: "1:550377717744:web:e90ce719e17ea784316735"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+
+      // Initialize Firebase Authentication and get a reference to the service
+      const auth = getAuth(app);
+    </script>
+
+    <!-- load react components. -->
     <script src="context.js" defer type="text/babel"></script>
     <script src="navbar.js" defer type="text/babel"></script>
     <script src="createaccount.js" defer type="text/babel"></script>
